# CG-Project

./: CMakeLists.txt  README.md  build.bat  regenerate_models.bat  run_tests.bat
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/include/: Camera.hpp  Configuration.hpp  Parse.hpp  Window.hpp  draw.hpp  group.hpp
src/engine/src/: Camera.cpp  Configuration.cpp  Window.cpp  draw.cpp  group.cpp  main.cpp  parse.cpp
src/generator/: ALL_BUILD.vcxproj  CMakeLists.txt  cmake_install.cmake  generator.sln  generator.vcxproj  generator.vcxproj.filters
src/generator/generator.dir/Debug/: generator.exe.recipe  generator.ilk
src/generator/generator.dir/Debug/generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/generator/include/: bezier.hpp  box.hpp  cone.hpp  plane.hpp  sphere.hpp
src/generator/src/: bezier.cpp  box.cpp  cone.cpp  main.cpp  plane.cpp  sphere.cpp
src/models/: bezier_10.3d  box_1_1.3d  box_2_3.3d  cone_1_2_4_3.3d  plane.3d  plane_1_1.3d  plane_2_3.3d  plane_4_6.3d  sphere_1_10_10.3d  sphere_1_20_20.3d  sphere_1_25_25.3d  sphere_1_8_8.3d  teapot.3d
src/scenes/: scene.xml  solar_system.xml  solar_system4.xml  test_4_bezier.xml  test_4_lights.xml  test_4_materials.xml  test_4_primitives.xml  test_4_spotlight.xml  test_4_textures.xml  test_p2_1.xml  test_p2_2.xml  test_p2_3.xml  test_p2_4.xml  test_plane.xml  test_sphere.xml
src/shared/: ALL_BUILD.vcxproj  CMakeLists.txt  cmake_install.cmake  shared.sln  shared.vcxproj  shared.vcxproj.filters
src/shared/Debug/: shared.lib
src/shared/include/: point.hpp  utils.hpp
src/shared/shared.dir/Debug/: shared.lib.recipe
src/shared/shared.dir/Debug/shared.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  shared.lastbuildstate
src/shared/src/: utils.cpp
